--- a/api-guides/routes_public.yaml
+++ b/api-guides/routes_public.yaml
@@ -2,227 +2,398 @@ openapi: 3.0.0
 info:
   title: Parish Management API
   version: 1.0.0
+  description: |
+    API para la gestión de parroquias.
+    
+    ### Flujo de Autenticación Simplificado:
+    1.  **`/api/auth/login`**: El usuario inicia sesión. La respuesta incluye las parroquias a las que puede estar asociado como trabajador.
+    2.  **`/api/auth/select-parish`**: El usuario establece el contexto de su sesión.
+        - Si envía un `parishId`, trabajará sobre esa parroquia.
+        - Si envía `parishId: null`, actuará como un feligrés general, sin acceso a funciones de gestión.
+    3.  **`/api/auth/select-role`**: Si entró como trabajador, selecciona el rol con el que operará. La sesión queda completamente autenticada.
+
+# Definición de los tags para agrupar los endpoints
+tags:
+  - name: Auth
+    description: Endpoints relacionados con la autenticación y gestión de la sesión del usuario.
+  - name: Chapels
+    description: Endpoints para la gestión de capillas de la parroquia actual.
+
+# Definición de las rutas (endpoints)
+paths:
+  # --- AUTH ENDPOINTS ---
+  /api/auth/register:
+    post:
+      tags:
+        - Auth
+      summary: User Registration
+      description: Registra un nuevo usuario en el sistema.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegisterRequest'
+      responses:
+        '201':
+          description: User created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseResponse'
+        '400':
+          description: Bad Request (e.g., validation error).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/auth/login:
+    post:
+      tags:
+        - Auth
+      summary: 'Step 1: User Login'
+      description: Autentica al usuario y devuelve su información básica junto con las parroquias a las que está asociado.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequest'
+      responses:
+        '200':
+          description: Successful login. Returns user info and associated parishes.
+          headers:
+            Set-Cookie:
+              $ref: '#/components/headers/SetCookieHeader'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginSuccessResponse'
+        '401':
+          description: Unauthorized (invalid credentials).
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+  /api/auth/select-parish:
+    post:
+      tags:
+        - Auth
+      summary: 'Step 2: Set Session Context'
+      description: |
+        Establece el contexto de la sesión del usuario.
+        - **Para modo trabajador**: Enviar el `parishId` de la parroquia a gestionar.
+        - **Para modo feligrés**: Enviar `null` en el campo `parishId`.
+      security:
+        - cookieAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SelectParishRequest'
+      responses:
+        '200':
+          description: Session context set successfully. The session token is updated.
+          headers:
+            Set-Cookie:
+              $ref: '#/components/headers/SetCookieHeader'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseResponse'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+
+  /api/auth/roles:
+    get:
+      tags:
+        - Auth
+      summary: Get User Roles for Parish
+      description: Devuelve la lista de roles que el usuario tiene asignados en la parroquia actualmente seleccionada en la sesión.
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: List of user roles for the current parish.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RolesSuccessResponse'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/ForbiddenParishNotSelected'
+
+  /api/auth/select-role:
+    post:
+      tags:
+        - Auth
+      summary: 'Step 3: Select Role'
+      description: Establece el rol activo en la sesión del usuario para la parroquia actual. La sesión queda completamente autenticada para la gestión.
+      security:
+        - cookieAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SelectRoleRequest'
+      responses:
+        '200':
+          description: Role selected. The session is now fully authenticated.
+          headers:
+            Set-Cookie:
+              $ref: '#/components/headers/SetCookieHeader'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BaseResponse'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/ForbiddenParishNotSelected'
+
+  /api/auth/logout:
+    post:
+      tags:
+        - Auth
+      summary: User Logout
+      description: Cierra la sesión del usuario invalidando el token de sesión.
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: Successful logout. The session cookie is cleared.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LogoutSuccessResponse'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+
+  # --- CHAPELS ENDPOINTS ---
+  /api/chapels:
+    get:
+      tags:
+        - Chapels
+      summary: Get Parish Chapels
+      description: Devuelve una lista de todas las capillas asociadas a la parroquia actualmente seleccionada en la sesión. Requiere modo trabajador.
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: A list of chapels.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ChapelsSuccessResponse'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/ForbiddenParishNotSelected'
+
+# Componentes reutilizables (esquemas, respuestas, etc.)
 components:
-  schemas:
-    BaseResponse:
-      type: object
-      properties:
-        message:
-          type: string
-          description: "Message to be shown in the frontend"
-        data:
-          oneOf:
-            - type: object
-            - type: array
-          description: "The main data, can be an object or an array"
-        error:
-          type: string
-          description: "Error string or empty if everything is ok"
-        traceback:
-          type: string
-          description: "Backend error message, returned only during testing phase"
+  # --- SECURITY SCHEMES ---
   securitySchemes:
     cookieAuth:
       type: apiKey
       in: cookie
       name: token
+      description: Session token stored in an HTTP-only cookie.
 
-paths:
-  /api/account/login:
-    post:
-      summary: User login (Step 1)
-      tags:
-        - Account
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  format: email
-                  example: user@example.com
-                password:
-                  type: string
-                  example: "strongpassword"
-      responses:
-        "200":
-          description: Successful login. Returns user info and associated parishes.
-          headers:
-            Set-Cookie:
-              schema:
-                type: string
-                example: "token=...; Path=/; HttpOnly"
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/BaseResponse'
-                  - type: object
-                    properties:
-                      data:
-                        type: object
-                        properties:
-                          user_name_full:
-                            type: string
-                            example: "Luis Barboza"
-                          associations:
-                            type: array
-                            items:
-                              type: object
-                              properties:
-                                id:
-                                  type: integer
-                                  example: 1
-                                name:
-                                  type: string
-                                  example: "La Consolación"
+  # --- HEADERS ---
+  headers:
+    SetCookieHeader: # <-- AÑADIDO: Definición reutilizable del Header
+      description: Establece la cookie de sesión que contiene el JWT.
+      schema:
+        type: string
+        example: 'token=...; Path=/; HttpOnly; SameSite=Strict'
 
-  /api/account/select-parish:
-    post:
-      summary: Select Parish (Step 2)
-      tags:
-        - Account
-      security:
-        - cookieAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                parishId:
-                  type: integer
-                  example: 1
-      responses:
-        "200":
-          description: Parish selected. Returns available roles in that parish.
-          headers:
-            Set-Cookie:
-              description: The JWT is updated with the parishId.
-              schema:
-                type: string
-                example: "token=...; Path=/; HttpOnly"
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/BaseResponse'
-                  - type: object
-                    properties:
-                      data:
-                        type: object
-                        properties:
-                          roles:
-                            type: array
-                            items:
-                              type: object
-                              properties:
-                                id:
-                                  type: integer
-                                  example: 2
-                                name:
-                                  type: string
-                                  example: "Secretario(a)"
+  # --- RESPONSES ---
+  responses:
+    Unauthorized:
+      description: Unauthorized. The provided session token is missing, invalid, or expired.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
+    ForbiddenParishNotSelected:
+      description: Forbidden. A parish has not been selected for the session (user is in parishioner mode or has not completed step 2).
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorResponse'
 
-  /api/account/select-role:
-    post:
-      summary: Select Role (Step 3)
-      tags:
-        - Account
-      security:
-        - cookieAuth: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                roleId:
-                  type: integer
-                  example: 2
-      responses:
-        "200":
-          description: Role selected. The session is now fully authenticated.
-          headers:
-            Set-Cookie:
-              description: The JWT is updated with the roleId.
-              schema:
-                type: string
-                example: "token=...; Path=/; HttpOnly"
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BaseResponse'
+  # --- SCHEMAS ---
+  schemas:
+    # BASE SCHEMAS
+    BaseResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          description: 'A descriptive message for the frontend.'
+          example: 'Operation successful'
+    ErrorResponse:
+      type: object
+      properties:
+        message:
+          type: string
+          description: 'A descriptive message for the frontend.'
+          example: 'An error occurred.'
+        error:
+          type: string
+          description: 'The specific error details.'
+          example: 'Invalid credentials'
 
-  /api/account/register:
-    post:
-      summary: User registration
-      tags:
-        - Account
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                full_name:
-                  type: string
-                paternal_surname:
-                  type: string
-                maternal_surname:
-                  type: string
-                email:
-                  type: string
-                  format: email
-                type_doc_id:
-                  type: integer
-                doc_value:
-                  type: string
-                username:
-                  type: string
-                password:
-                  type: string
-      responses:
-        "200":
-          description: Successful registration
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/BaseResponse'
-                  - type: object
-                    properties:
-                      data:
-                        type: object
-                        description: "Empty object for this endpoint"
+    # AUTH REQUESTS
+    RegisterRequest:
+      type: object
+      required: [full_name, paternal_surname, email, password, username]
+      properties:
+        full_name:
+          type: string
+          example: 'Juan'
+        paternal_surname:
+          type: string
+          example: 'Pérez'
+        maternal_surname:
+          type: string
+          example: 'García'
+        email:
+          type: string
+          format: email
+          example: 'user@example.com'
+        type_doc_id:
+          type: integer
+          description: 'ID for the document type (e.g., DNI, Passport).'
+          example: 1
+        doc_value:
+          type: string
+          example: '12345678'
+        username:
+          type: string
+          example: 'jperez'
+        password:
+          type: string
+          format: password
+          example: 'aVeryStrongP@ssword'
+    LoginRequest:
+      type: object
+      required: [email, password]
+      properties:
+        email:
+          type: string
+          format: email
+          example: 'user@example.com'
+        password:
+          type: string
+          format: password
+          example: 'strongpassword'
+    SelectParishRequest:
+      type: object
+      required: [parishId]
+      properties:
+        parishId:
+          type: integer
+          description: 'The ID of the parish to activate. Send `null` to enter parishioner mode.'
+          nullable: true
+          example: 1
+    SelectRoleRequest:
+      type: object
+      required: [roleId]
+      properties:
+        roleId:
+          type: integer
+          description: 'The ID of the role to activate in the session.'
+          example: 2
 
-  /api/account/logout:
-    post:
-      summary: User logout
-      tags:
-        - Account
-      security:
-        - cookieAuth: []
-      responses:
-        "200":
-          description: Successful logout. The session cookie is cleared.
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/BaseResponse'
-                  - type: object
-                    properties:
-                      data:
-                        type: object
-                        properties:
-                          redirect_url:
-                            type: string
-                            format: url
-                            example: "/acceso"
+    # AUTH RESPONSES & DATA OBJECTS
+    ParishAssociation:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: 'Parroquia La Consolación'
+    LoginResponseData:
+      type: object
+      properties:
+        user_name_full:
+          type: string
+          example: 'Luis Barboza'
+        associations:
+          type: array
+          items:
+            $ref: '#/components/schemas/ParishAssociation'
+    LoginSuccessResponse:
+      allOf:
+        - $ref: '#/components/schemas/BaseResponse'
+        - type: object
+          properties:
+            data:
+              $ref: '#/components/schemas/LoginResponseData'
+              
+    LogoutResponseData:
+      type: object
+      properties:
+        redirect_url:
+          type: string
+          format: uri-relative
+          example: '/login'
+    LogoutSuccessResponse:
+      allOf:
+        - $ref: '#/components/schemas/BaseResponse'
+        - type: object
+          properties:
+            data:
+              $ref: '#/components/schemas/LogoutResponseData'
+              
+    # ROLES
+    Role:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 2
+        name:
+          type: string
+          example: 'Secretario(a)'
+    RolesSuccessResponse:
+      allOf:
+        - $ref: '#/components/schemas/BaseResponse'
+        - type: object
+          properties:
+            data:
+              type: array
+              items:
+                $ref: '#/components/schemas/Role'
+
+    # CHAPELS
+    Chapel:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 101
+        name:
+          type: string
+          example: 'Capilla San Martín de Porres'
+        address:
+          type: string
+          example: 'Av. Principal 123'
+    ChapelsSuccessResponse:
+      allOf:
+        - $ref: '#/components/schemas/BaseResponse'
+        - type: object
+          properties:
+            data:
+              type: array
+              items:
+                $ref: '#/components/schemas/Chapel'
